src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  text-align: center;
}

main {
  color: #000000;
  background-color: rgba(255, 229, 182, 0.884);
  display: flex;
  flex-direction: column;
}

body {
  background-image: url("https://t3.ftcdn.net/jpg/02/61/37/08/360_F_261370893_3FXrdROYSFQqUkCQWq2z7CdyTauzaGmT.jpg");
  font-size: 20px;
}

/* Default Navbar Styles */
.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px 20px;
  background-color: #facd7a;
  height: 90px;
  top: 0;
  z-index: 9999;
  transition: height 0.3s ease, padding 0.3s ease;
}

.navbar-logo {
  display: flex;
  align-items: center;
}

.navbar-logo .logo {
  height: 150px;
  transition: height 0.3s ease;
}

.navbar-title {
  font-family: "Lobster", cursive;
  font-size: 60px;
  margin: 0;
  color: rgb(232, 240, 231);
  -webkit-text-stroke: 2px #507231;
  transition: font-size 0.3s ease;
}

/* When Navbar is Scrolled (Please do not delete)
.navbar.scrolled {
  height: 60px;
  padding: 5px 10px;
}

.navbar.scrolled .logo {
  height: 80px;
}

.navbar.scrolled .navbar-title {
  font-size: 40px;
}

.navbar.scrolled .navbar-links {
  gap: 10px;
} */

/* Navbar Links Styling */
.navbar-links {
  display: flex;
  gap: 15px;
}

.navbar-links .navbar-link {
  text-decoration: none;
  color: #507231;
  font-weight: bold;
  font-size: 24px;
}

.navbar-link:hover {
  color: #638841;
}

/* Make Navbar Responsive on Smaller Screens */

@media (max-width: 768px) {
  .navbar {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px;
  }

  .navbar-title {
    font-size: 30px;
  }

  .navbar-links {
    flex-direction: column;
    gap: 10px;
  }

  .navbar-links .navbar-link {
    font-size: 16px;
  }

  .navbar.scrolled {
    height: 50px;
    padding: 5px;
  }

  .navbar.scrolled .logo {
    height: 60px;
  }
}

/* Homepage */
.homepage {
  display: flex;
}

.homepage-filters {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  height: 200px;
  width: 110%;
  margin: 10px;
  text-align: left;
}

/* card on homepage */

.card-container {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  justify-content: space-evenly;
  padding: 10px;
}

.card {
  flex: 1 1 calc(33.333% - 20px); /* 3 cards per row */
  max-width: calc(33.333% - 20px);
  min-height: 700px; /* Fixed height for larger screens */
  box-sizing: border-box;
  background-color: rgb(255, 255, 255);
  border-radius: 8px;
  padding: 15px;
  text-align: center;
  cursor: pointer;
  transition: transform 0.2s;
  display: flex;
  flex-direction: column;
  justify-content: space-between; /* Make sure content is evenly spaced */
}

.card:hover {
  transform: scale(1.05);
}

.card img {
  max-width: 100%; /* Make images responsive */
  height: 70%;
  border-radius: 8px;
  object-fit: cover;
}
/* Responsive design for smaller screens */

/* For medium screens (tablets) */
@media (max-width: 768px) {
  .card {
    flex: 1 1 calc(50% - 20px); /* 2 cards per row */
    max-width: calc(50% - 20px);
    min-height: 500px; /* Adjust height for medium screens */
  }
}

/* For smaller screens (phones) */
@media (max-width: 480px) {
  .card {
    flex: 1 1 100%; /* 1 card per row */
    max-width: 100%;
    min-height: 400px; /* Adjust height for small screens */
  }
}

/*Details Page*/

.details-btn {
  display: center;
  justify-content: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  border-radius: 15px;
  color: white;
  padding: 1px 40px;
  font-size: 16px;
  background-color: rgb(1, 102, 1);
  background-color: #033106;
}

.details-btn:hover {
  color: #fffb00;
}

/* Images on details page */

.gallery {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.selected-image {
  margin-bottom: 20px;
}

.large-image {
  width: 80%; /* Dynamically sized to fit the layout */
  max-width: 400px; /* Maximum limit for the large image */
  height: auto;
}

.thumbnails {
  display: flex;
  justify-content: center;
  gap: 10px;
}

.thumbnail {
  cursor: pointer;
  width: 80px;
  height: auto;
  transition: transform 0.2s;
  border: 2px solid transparent; /* Default state */
}

.thumbnail.active {
  border: 2px solid rgb(174, 174, 212); /* Indicate active thumbnail */
}

.thumbnail:hover {
  transform: scale(1.1);
}

/*Submit Form*/

.form-container {
  max-width: 900px;
  margin: 0 auto;
  padding: 30px;
  text-align: left;
}
.form-container h2 {
  font-size: 3rem;
  margin-bottom: 20px;
  text-align: center;
  color: #507231;
}

.form-container input,
.form-container button {
  width: 100%;
  padding: 12px;
  margin: 10px 0;
  font-size: 17px;
  border: 1px solid #ccc;
  border-radius: 8px;
  box-sizing: border-box;
}
.form-container input:focus,
.form-container button:focus {
  outline: none;
  border-color: #507231;
}
.form-container input[type="text"],
.form-container input[type="number"] {
  background-color: #f1f1f1;
}
.form-container input[type="text"]:focus,
.form-container input[type="number"]:focus {
  background-color: #fff;
}
.form-container button {
  background-color: #507231;
  color: white;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s;
}

.form-container button:disabled {
  background-color: #ccc;
  cursor: not-allowed;
}

.form-container button:hover:not(:disabled) {
  background-color: #3d5a2d;
}

/* Labels and Checkbox Styling */
.form-container label {
  font-size: 18px;
  color: #0a0101;
  display: inline-flex;
  align-items: center;
}
.form-container input[type="checkbox"] {
  margin-top: 2px;
}

.form-container div {
  margin-bottom: 11px;
}

.form-container .checkbox-group {
  display: flex;
  gap: 20px;
  margin-top: 11px;
  align-items: center;
}

.form-container .checkbox-group label {
  font-size: 16px;
  color: #507231;
  display: flex;
  align-items: center;
}

.form-container h3 {
  font-size: 1.2rem;
  color: #507231;
  margin-top: 20px;
}

/* Error Message */
.form-container .error-message {
  color: red;
  font-size: 1rem;
  text-align: center;
  margin-top: 10px;
}

.submit-button {
  background-color: #507231;
  color: #fff;
  font-size: 1.2rem;
  padding: 12px 30px;
  border: none;
  border-radius: 8px;
  cursor: pointer;
  transition: background-color 0.3s ease, transform 0.3s ease;
  margin-top: 20px;
  display: block;
  width: 100%;
}

.submit-button:hover {
  background-color: #3e5e28;
  transform: scale(1.05);
}

/* Responsive Styling for Mobile */
@media (max-width: 768px) {
  .form-container {
    padding: 20px; /* Reduce padding on smaller screens */
    width: 90%; /* Make form width responsive */
  }

  .form-container div input {
    font-size: 1rem; /* Slightly smaller text on mobile */
  }

  .submit-button {
    padding: 10px 20px; /* Adjust button size on mobile */
  }
}

/* Modal/Pop up Screen */

.modal {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90vw;
  max-width: 600px;
  height: auto;
  max-height: 80vh;
  background-color: white;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  border-radius: 10px;
  padding: 20px;
  overflow-y: auto;
  box-sizing: border-box;
  z-index: 1000;
  box-sizing: border-box;
}

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 999;
}

/* Modal content */
.modal-content {
  background-color: white;
  padding: 10px 20px;
  border-radius: 10px;
  width: 100%;
  max-width: 600px;
  box-sizing: border-box;
  font-size: 1rem;
  line-height: 1.5;
  text-align: center;
  overflow-y: auto;
  max-height: 100%;
}

/* Close button */
.close {
  position: absolute;
  top: 10px;
  right: 10px;
  font-size: 30px;
  color: #aaa;
  cursor: pointer;
}

.close:hover {
  color: black;
}

/* Responsive styling: when the screen is smaller than 500px */
@media (max-width: 500px) {
  .modal {
    width: 90%;
    max-width: 100%;
    padding: 10px;
  }

  .modal-content {
    font-size: 0.9rem;
  }

  .close {
    font-size: 24px;
  }
}

/*Footer */

.footer {
  align-self: flex-end;
  /* bottom: 0;
  left: 0; */
  width: 100%;
  background-color: #507231;
  color: white;
  text-align: center;
  padding: 15px 0;
}

/*NotFoundPage */

.notFoundLink {
  font-size: 20px;
  color: #bad7f5;
  text-decoration: none;
  display: block;
  margin-top: 30px;
  margin-bottom: 100px;
  font-size: 26px;
}

.notFoundLink:hover {
  color: #8ff11f;
}

/*About Page */
.about {
  font-size: 20px;
  color: #507231;
  text-decoration: none;
  display: block;
  margin-top: 30px;
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 100px;
  font-size: 26px;
}

/* mobile version */

@media (max-width: 768px) {
  /* Apply these styles only when the viewport width is 768px or less (tablet and smaller screens) */
  .card {
    flex: 1 1 calc(50% - 20px); /* 
      flex-grow: 1   -> Allows the card to grow and take up available space equally with others.
      flex-shrink: 1 -> Allows the card to shrink proportionally if there's not enough space.
      flex-basis: calc(50% - 20px) -> Sets the card's base width to 50% of the container minus 20px 
    */
    max-width: calc(
      50% - 20px
    ); /* Ensures the card's maximum width is also 50% of the container minus 20px. */
  }
}

@media (max-width: 480px) {
  .card {
    flex: 1 1 100%; /* 1 card per row on smaller screens */
    max-width: 100%;
  }
}

/* Chatbot */

/* Chatbot Overlay */
.chatbot-overlay {
  position: fixed;
  bottom: 80px; /* Ensure it's not covered by the chat bubble */
  right: 20px;
  z-index: 999; /* Ensure the overlay is above other elements */
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
  border-radius: 8px;
  overflow: hidden;
  background-color: #fff;
}

